css structure modification

--- a/Restaurants/restaurant_alafrancaise.html
+++ b/Restaurants/restaurant_alafrancaise.html
@@ -42,12 +42,12 @@
                     </a>     
                         
                     <a href="/">
-                        <img class="logo logo-resto" src="assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                        <img class="logo logo-resto" src="../assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
                     </a>
                 </nav>
             </div>
             <div class="img-resto-size">
-            <img class="img-resto" src="./assets/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+            <img class="img-resto" src="../assets/images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="Image du restaurant À la française">
             </div>
         </header>
