--- a/Restaurants/restaurant_ledelicedessens.html
+++ b/Restaurants/restaurant_ledelicedessens.html
@@ -46,24 +46,23 @@
                 </a>     
                     
                 <a href="/">
-                    <img class="logo logo-resto" src="assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                    <img class="logo logo-resto" src="../assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
                 </a>
             </nav>
         </div>
     
         <!-- PHOTO RESTAURANT -->
         <div class="img-resto-size">
-        <img class="img-resto" src="./assets/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+        <img class="img-resto" src="../assets/images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
             alt="Image du restaurant La palette de goût">
         </div>
-
     </header>
 
     <main class="center-menu">
         <!-- MENU -->
         <section class="menu-restaurant">
             <header class="restoname-heart">
-                <h1 class="menu-resto-name">La palette du goût</h1> 
+                <h1 class="menu-resto-name">Le délice des sens</h1> 
                 <div class="heart-resto">
                     <input type="checkbox" name="toto" id="toto">
                     <label for="toto">
@@ -93,8 +92,8 @@
                 <div>
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Fricassée d'escargot</h3>
-                        <p class="plat-subtitle">Au piment d'Espelette</p>
+                        <h3 class="plat-title">Tartare de thon </h3>
+                        <p class="plat-subtitle">Assaisonné au Yuzu</p>
                     </div>
                     <div class="price-check"> 
                         <span class="plat-prix">25€</span>
@@ -106,11 +105,11 @@
 
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Foie gras de canard mi-cuit</h3>
-                        <p class="plat-subtitle">Et ses copeaux de truffe noire</p>
+                        <h3 class="plat-title">Bouchée de homard croustillant</h3>
+                        <p class="plat-subtitle">Et sa fanrandole de petits légumes</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">35€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -119,16 +118,17 @@
 
                 <button class="menu-btn last-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Œuf au plat</h3>
-                        <p class="plat-subtitle">Assaisonné à la truffe</p>
+                        <h3 class="plat-title">Poulet rôti aux herbes de Provence</h3>
+                        <p class="plat-subtitle">Et sa crème de truffe</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">40€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
                     </div>
                 </button>
+                </div>
             </div>      
 
             <div class="menu"> 
@@ -137,11 +137,11 @@
                 <div>
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Filet de bœuf aux herbes</h3>
-                        <p class="plat-subtitle">Accompagné de sa ribambelle de légumes</p>
+                        <h3 class="plat-title">Poulet rôti aux herbes de Provence</h3>
+                        <p class="plat-subtitle">Et sa crème de truffe</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">40€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -150,11 +150,11 @@
 
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Parmentier de queue de bœuf</h3>
-                        <p class="plat-subtitle">À la truffe noire sur sa purée de panais</p>
+                        <h3 class="plat-title">Langouste rôtie</h3>
+                        <p class="plat-subtitle">Et ses légumes de saison </p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">35€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -163,11 +163,11 @@
 
                 <button class="menu-btn last-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Filet de turbot</h3>
-                        <p class="plat-subtitle">Aux agrumes</p>
+                        <h3 class="plat-title">Côte de boeuf Angus</h3>
+                        <p class="plat-subtitle">Et sa pirée de panais</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">44€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -181,11 +181,11 @@
                 <div>
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Paris-Brest</h3>
-                        <p class="plat-subtitle">Revisité</p>
+                        <h3 class="plat-title">Oeuf au plat</h3>
+                        <p class="plat-subtitle">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">76€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -194,11 +194,11 @@
 
                 <button class="menu-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Macaron au chocolat d'exception</h3>
-                        <p class="plat-subtitle">Et glace à la vanille de Madagascar</p>
+                        <h3 class="plat-title">Crème brulée</h3>
+                        <p class="plat-subtitle">Revisitée</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">22€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -207,11 +207,11 @@
 
                 <button class="menu-btn last-btn">
                     <div class="plat-description">
-                        <h3 class="plat-title">Mousse au chocolat</h3>
-                        <p class="plat-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                        <h3 class="plat-title">Tiramisu</h3>
+                        <p class="plat-subtitle">À la noisette</p>
                     </div>
                     <div class="price-check"> 
-                        <span class="plat-prix">25€</span>
+                        <span class="plat-prix">23€</span>
                         <div class="green-check">
                             <i class="fa-solid fa-circle-check fa-xl check-color"></i>
                         </div>
@@ -219,7 +219,7 @@
                 </button>
             </div>
             <div class="btn-center">
-            <button class="btn btn-order">Commander</button>
+                <button class="btn btn-order">Commander</button>
             </div>
         </section>
     </main>
