--- a/Restaurants/restaurant_lanoteenchantee.html
+++ b/Restaurants/restaurant_lanoteenchantee.html
@@ -46,14 +46,14 @@
                 </a>     
                     
                 <a href="/">
-                    <img class="logo logo-resto" src="assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
+                    <img class="logo logo-resto" src="../assets/images/ohmyfood@2x.svg" alt="logo Ohmyfood">
                 </a>
             </nav>
         </div>
     
         <!-- PHOTO RESTAURANT -->
         <div class="img-resto-size">
-        <img class="img-resto" src="./assets/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant La note enchantée">
+        <img class="img-resto" src="../assets/images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image du restaurant La note enchantée">
         </div>
 
     </header>
